product rating api

--- a/app/globals.css
+++ b/app/globals.css
@@ -26536,7 +26536,8 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
   background: var(--star-colour);
 }
 
-.rating-star-container .container__items input:checked ~ label .star-stroke .star-fill{
+.rating-star-container .container__items > div:has(input:checked) label .star-stroke .star-fill,
+.rating-star-container .container__items > div:has(input:checked) ~ div label .star-stroke .star-fill {
   background: var(--star-colour);
 }
 
