product page filter

--- a/app/globals.css
+++ b/app/globals.css
@@ -24408,6 +24408,10 @@ div.error-bg > p {
   margin-bottom: 35px;
 }
 
+.single-input .select__menu {
+  z-index: 10;
+}
+
 .rts-billing-details-area form .single-input input {
   height: 50px;
   width: 100%;
@@ -24809,6 +24813,10 @@ div.error-bg > p {
   background: transparent;
   padding: 0;
   margin-bottom: 15px;
+}
+
+.filter-select-area .single-input {
+  width: 200px;
 }
 
 .vendor-search-area .filter-select-area .top-filter {
