--- a/app/globals.css
+++ b/app/globals.css
@@ -19124,10 +19124,10 @@ li.with-megamenu:hover .rts-megamenu {
 
 .single-shopping-card-one.tranding-product {
   display: flex;
-  align-items: center;
   gap: 18px;
   background: #FFFFFF;
   margin-bottom: 15px;
+  height: 130px;
 }
 
 @media only screen and (max-width: 1199px) {
@@ -19187,7 +19187,6 @@ li.with-megamenu:hover .rts-megamenu {
 
 @media only screen and (min-width: 1200px) and (max-width: 1599px) {
   .single-shopping-card-one.tranding-product .thumbnail-preview > img {
-    height: auto;
     width: 100%;
   }
 }
